[package]
name = "hdkey"
version = "0.0.0-alpha.0"
edition = "2021"
license = "MIT"
readme = "README.md"
include = ["src", "Cargo.toml", "LICENSE", "README.md"]
description = "hdkey"
authors = ["Anubis"]
repository = "https://github.com/lazyanubis/hdkey"

# [lib]
# path = "src/lib.rs"
# crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[features]

[dependencies]
secp256k1 = "0.28"
