[package]
name = "hdkey"
version = "0.0.4"
edition = "2021"
license = "MIT"
readme = "README.md"
include = ["src", "Cargo.toml", "LICENSE", "README.md"]
description = "hdkey"
authors = ["Anubis"]
repository = "https://github.com/lazyanubis/hdkey"

# [lib]
# path = "src/lib.rs"
# crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[features]
std = ["secp256k1"]
default = ["std"]
global-context = ["std", "secp256k1/global-context"]


[dependencies.secp256k1]
version = "0.28"
optional = true

[dependencies]
hex = "0.4"
sha2 = "0.10"
ripemd = "0.1"
bs58 = { version = "0.5", features = ["check"] }
hmac = "0.12"
